--- a/assets/scss/components/_teaser-card.scss
+++ b/assets/scss/components/_teaser-card.scss
@@ -1,9 +1,9 @@
 .page-home {
 
   .teaser-card-container {
-    flex: 1 1;
     display: flex;
     flex-flow: row wrap;
+    justify-content: space-around;
   }
 
   .teaser-card {
