--- a/layouts/partials/intro.html
+++ b/layouts/partials/intro.html
@@ -39,7 +39,7 @@
   </div>
   <div class="container pl-0 pr-0 pt-4 pt-xl-0 pb-sm-5">
     <div class="row pb-sm-4">
-      <div class="col-12 teaser-box teaser-box--negativeMargin pl-0 pr-0">
+      <div class="col-12 teaser-box teaser-box--negativeMargin">
         <div class="d-none d-md-block">
           {{ partial "intro-svg.html" . }}
         </div>
