--- a/layouts/partials/tools.html
+++ b/layouts/partials/tools.html
@@ -5,19 +5,19 @@
     </h5>
     <div class="teaser-card-content">
       <div class="teaser-card-container">
-        <div class="teaser-card teaser-card--smallPadding mr-4 mb-4">
+        <div class="teaser-card teaser-card--smallPadding mb-4">
           <img src="/images/home/integrations/tools-delivery-argo.png">
         </div>
-        <div class="teaser-card teaser-card--smallPadding mr-4 mb-4">
+        <div class="teaser-card teaser-card--smallPadding mb-4">
           <img src="/images/home/integrations/tools-delivery-azure.png">
         </div>
         <div class="teaser-card teaser-card--smallPadding mb-4">
           <img src="/images/home/integrations/tools-delivery-gitlab.png">
         </div>
-        <div class="teaser-card teaser-card--smallPadding mr-4">
+        <div class="teaser-card teaser-card--smallPadding">
           <img src="/images/home/integrations/tools-delivery-helm.png">
         </div>
-        <div class="teaser-card teaser-card--smallPadding mr-4">
+        <div class="teaser-card teaser-card--smallPadding">
           <img src="/images/home/integrations/tools-delivery-jenkins.png">
         </div>
         <a class="teaser-card teaser-card--smallPadding teaser-card--outline" href="https://github.com/keptn-sandbox/contributing">
@@ -31,19 +31,19 @@
     </h5>
     <div class="teaser-card-content">
       <div class="teaser-card-container">
-        <div class="teaser-card teaser-card--smallPadding mr-4 mb-4">
+        <div class="teaser-card teaser-card--smallPadding mb-4">
           <img src="/images/home/integrations/tools-observability-dynatrace.png">
         </div>
-        <div class="teaser-card teaser-card--smallPadding mr-4 mb-4">
+        <div class="teaser-card teaser-card--smallPadding mb-4">
           <img src="/images/home/integrations/tools-observability-grafana.png">
         </div>
         <div class="teaser-card teaser-card--smallPadding mb-4">
           <img src="/images/home/integrations/tools-observability-opentelementry.png">
         </div>
-        <div class="teaser-card teaser-card--smallPadding mr-4">
+        <div class="teaser-card teaser-card--smallPadding">
           <img src="/images/home/integrations/tools-observability-prometheus.png">
         </div>
-        <div class="teaser-card teaser-card--smallPadding mr-4">
+        <div class="teaser-card teaser-card--smallPadding">
           <img src="">
         </div>
         <a class="teaser-card teaser-card--smallPadding teaser-card--outline" href="https://github.com/keptn-sandbox/contributing">
@@ -57,19 +57,19 @@
     </h5>
     <div class="teaser-card-content">
       <div class="teaser-card-container">
-        <div class="teaser-card teaser-card--smallPadding mr-4 mb-4">
+        <div class="teaser-card teaser-card--smallPadding mb-4">
           <img src="/images/home/integrations/tools-testing-jmeter.png">
         </div>
-        <div class="teaser-card teaser-card--smallPadding mr-4 mb-4">
+        <div class="teaser-card teaser-card--smallPadding mb-4">
           <img src="/images/home/integrations/tools-testing-litmus.png">
         </div>
         <div class="teaser-card teaser-card--smallPadding mb-4">
           <img src="/images/home/integrations/tools-testing-locust.png">
         </div>
-        <div class="teaser-card teaser-card--smallPadding mr-4">
+        <div class="teaser-card teaser-card--smallPadding ">
           <img src="/images/home/integrations/tools-testing-neoload.png">
         </div>
-        <div class="teaser-card teaser-card--smallPadding mr-4">
+        <div class="teaser-card teaser-card--smallPadding ">
           <img src="/images/home/integrations/tools-testing-selenium.png">
         </div>
         <a class="teaser-card teaser-card--smallPadding teaser-card--outline" href="https://github.com/keptn-sandbox/contributing">
@@ -83,19 +83,19 @@
     </h5>
     <div class="teaser-card-content">
       <div class="teaser-card-container">
-        <div class="teaser-card teaser-card--smallPadding mr-4 mb-4">
+        <div class="teaser-card teaser-card--smallPadding mb-4">
           <img src="/images/home/integrations/tools-notifications-keptn.png">
         </div>
-        <div class="teaser-card teaser-card--smallPadding mr-4 mb-4">
+        <div class="teaser-card teaser-card--smallPadding mb-4">
           <img src="/images/home/integrations/tools-notifications-slack.png">
         </div>
         <div class="teaser-card teaser-card--smallPadding mb-4">
           <img src="/images/home/integrations/tools-notifications-teams.png">
         </div>
-        <div class="teaser-card teaser-card--smallPadding mr-4">
+        <div class="teaser-card teaser-card--smallPadding ">
           <img src="/images/home/integrations/tools-notifications-webex.png">
         </div>
-        <div class="teaser-card teaser-card--smallPadding mr-4">
+        <div class="teaser-card teaser-card--smallPadding ">
           <img src="/images/home/integrations/tools-notifications-webhook.png">
         </div>
         <a class="teaser-card teaser-card--smallPadding teaser-card--outline" href="https://github.com/keptn-sandbox/contributing">
@@ -109,19 +109,19 @@
     </h5>
     <div class="teaser-card-content">
       <div class="teaser-card-container">
-        <div class="teaser-card teaser-card--smallPadding mr-4 mb-4">
+        <div class="teaser-card teaser-card--smallPadding mb-4">
           <img src="/images/home/integrations/tools-automation-ansible.png">
         </div>
-        <div class="teaser-card teaser-card--smallPadding mr-4 mb-4">
+        <div class="teaser-card teaser-card--smallPadding mb-4">
           <img src="/images/home/integrations/tools-automation-bash.png">
         </div>
         <div class="teaser-card teaser-card--smallPadding mb-4">
           <img src="/images/home/integrations/tools-automation-python.png">
         </div>
-        <div class="teaser-card teaser-card--smallPadding mr-4">
+        <div class="teaser-card teaser-card--smallPadding">
           <img src="/images/home/integrations/tools-automation-servicenow.png">
         </div>
-        <div class="teaser-card teaser-card--smallPadding mr-4">
+        <div class="teaser-card teaser-card--smallPadding">
           <img src="/images/home/integrations/tools-automation-webhook.png">
         </div>
         <a class="teaser-card teaser-card--smallPadding teaser-card--outline" href="https://github.com/keptn-sandbox/contributing">
