--- a/assets/scss/components/_footer.scss
+++ b/assets/scss/components/_footer.scss
@@ -29,10 +29,12 @@
   }
 
   .footer-link {
-    color: $white;
+    //override for why-keptn page
+    color: $white !important;
     text-decoration: none;
 
     &:hover {
+      //override for why-keptn page
       color: $linkHoverColor-home;
       text-decoration: none;
     }
@@ -81,19 +83,22 @@
 
 .page-home {
   .footer {
-    &:before {
-      position: absolute;
-      left: 0;
-      bottom: -10px;
-      display: inline-block;
-      width: 100%;
-      height: 550px;
-      content: "";
-      background-image: url('/images/home/waves03.png');
-      background-repeat-x: repeat;
-      background-repeat-y: no-repeat;
-      background-position-y: bottom;
-      background-size: 100%;
+
+    @media screen and (min-width: $bp-xl) {
+      &:before {
+        position: absolute;
+        left: 0;
+        bottom: -10px;
+        display: inline-block;
+        width: 100%;
+        height: 550px;
+        content: "";
+        background-image: url('/images/home/waves03.png');
+        background-repeat-x: repeat;
+        background-repeat-y: no-repeat;
+        background-position-y: bottom;
+        background-size: 100%;
+      }
     }
   }
 }
