--- a/layouts/partials/get-started.html
+++ b/layouts/partials/get-started.html
@@ -2,19 +2,19 @@
   <div class="container pt-4 pt-md-5 pb-4">
     <div class="row pt-4 pt-md-5 pb-2 pb-md-3">
 
-      <div class="col-12 col-md-7 pb-4 pb-md-0">
+      <div class="col-12 col-lg-7 pb-4 pb-md-0">
         <div class="pt-2">
           {{ with .Site.GetPage "section" "home/get-started" }}
           {{ .Content }}
           {{ end }}
 
-          <div class="d-block d-lg-flex">
+          <div class="d-block d-md-flex mb-md-5 mb-lg-0">
             <div class="d-block">
-              <a href="https://keptn.sh/docs/quickstart/" class="d-inline-block button button--filledGreen mb-3 mb-lg-0 mr-lg-2">Start now!</a>
+              <a href="https://keptn.sh/docs/quickstart/" class="d-inline-block button button--filledGreen mb-3 mb-lg-0 mr-md-2">Start now!</a>
               &nbsp;&nbsp;&nbsp;
             </div>
             <div class="d-block">
-              <a href="#" class="button button--outlinedWhite d-inline-block mb-3 mb-lg-0 mr-lg-2">See it in action</a>
+              <a href="#" class="button button--outlinedWhite d-inline-block mb-3 mb-lg-0 mr-md-2">See it in action</a>
               &nbsp;&nbsp;&nbsp;
             </div>
             <div class="d-block">
@@ -24,7 +24,7 @@
         </div>
       </div>
 
-      <div class="col-12 col-md-5 d-flex flex-column justify-content-md-between pb-md-0">
+      <div class="col-12 col-lg-5 d-flex flex-column justify-content-md-between pb-md-0">
         <img src="/images/home/cloud-native-computing-foundation.svg">
       </div>
     </div>
