--- a/layouts/partials/intro.html
+++ b/layouts/partials/intro.html
@@ -9,12 +9,12 @@
           </a>
         </div>
       </div>
-      <div class="col-10 col-md-3 teaser-box teaser-box--white teaser-box--intro mr-md-5 mr-xl-0">
+      <div class="col-12 col-md-5 col-lg-3 teaser-box teaser-box--white teaser-box--intro mr-lg-5 mr-xl-0">
         {{ with .Site.GetPage "section" "home/headline" }}
         {{ .Content }}
         {{ end }}
       </div>
-      <div class="col-12 col-md-6 teaser-box teaser-box--white teaser-box--intro ml-md-5 ml-lg-0">
+      <div class="col-12 col-md-7 col-lg-6 teaser-box teaser-box--white teaser-box--intro ml-lg-5 ml-lg-0">
         {{ with .Site.GetPage "section" "home/intro" }}
         {{ .Content }}
         {{ end }}
@@ -34,10 +34,9 @@
           </div>
         </div>
       </div>
-      <div class="col-md-2"></div>
     </div>
   </div>
-  <div class="container pl-0 pr-0 pt-4 pt-xl-0 pb-sm-5">
+  <div class="container pl-0 pr-0 pt-5 pt-xl-0 pb-lg-5">
     <div class="row pb-sm-4">
       <div class="col-12 teaser-box teaser-box--negativeMargin">
         <div class="d-none d-md-block">
