Update images and logo size

--- a/layouts/partials/intro-svg.html
+++ b/layouts/partials/intro-svg.html
@@ -512,7 +512,7 @@
             </g>
           </g>
         </g>
-        <a xlink:href="https://www.google.com/" target="_blank">
+        <a xlink:href="https://github.com/keptn-contrib" target="_blank">
           <g id="bring-your-tools" transform="translate(195.000000, 727.000000)">
             <mask id="mask-24" fill="white">
               <use xlink:href="#path-23"></use>
