--- a/assets/scss/pages/_home.scss
+++ b/assets/scss/pages/_home.scss
@@ -37,21 +37,17 @@
     &:after {
       position: absolute;
       left: 0;
-      bottom: -10px;
+      bottom: 0;
       display: inline-block;
       width: 100%;
       height: 300px;
       content: "";
       background-image: url('/images/home/hero/waves-intro.jpg');
-      background-repeat-x: repeat;
-      background-repeat-y: no-repeat;
       background-position-y: bottom;
       background-size: cover;
 
       @media screen and (min-width: $bp-lg) {
         height: 50%;
-        background-size: 100%;
-        height: 500px;
       }
     }
   }
