--- a/assets/scss/components/_footer.scss
+++ b/assets/scss/components/_footer.scss
@@ -91,13 +91,20 @@
         bottom: -10px;
         display: inline-block;
         width: 100%;
-        height: 550px;
+        height: 500px;
         content: "";
         background-image: url('/images/home/waves03.png');
         background-repeat-x: repeat;
         background-repeat-y: no-repeat;
         background-position-y: bottom;
         background-size: 100%;
+      }
+    }
+
+    @media screen and (min-width: $bp-xxl) {
+      &:before {
+        background-position-y: center;
+        height: 480px;
       }
     }
   }
