--- a/layouts/partials/intro.html
+++ b/layouts/partials/intro.html
@@ -39,10 +39,10 @@
   <div class="container pl-0 pr-0 pt-5 pt-xl-0 pb-lg-5">
     <div class="row pb-sm-4">
       <div class="col-12 teaser-box teaser-box--negativeMargin">
-        <div class="d-none d-md-block">
+        <div class="d-none d-sm-block">
           {{ partial "intro-svg.html" . }}
         </div>
-        <div class="d-md-none">
+        <div class="d-sm-none text-center">
           {{ partial "intro-svg-mobile.html" . }}
         </div>
       </div>
