--- a/layouts/index.html
+++ b/layouts/index.html
@@ -172,7 +172,7 @@ page-home
         {{ with .Site.GetPage "section" "home/happy-users-logos" }}
         {{ .Content }}
         {{ end }}
-        <a href="#">
+        <a href="https://github.com/keptn/keptn/blob/master/ADOPTERS.md">
           <img src="/images/home/add-organisation.svg">
         </a>
       </div>
