Update intro graphic.

--- a/assets/scss/components/_teaser-box.scss
+++ b/assets/scss/components/_teaser-box.scss
@@ -106,6 +106,7 @@
     }
 
     &--negativeMargin {
+      pointer-events: none;
       @media screen and (min-width: $bp-xl) {
         margin-top: -130px;
       }
