--- a/layouts/index.html
+++ b/layouts/index.html
@@ -198,7 +198,7 @@ page-home
                     Sebastian Bonk
                   </p>
                   <p class="splide__info">
-                    Manager of Software adflkgj
+                    Manager of Software Development Avodaq
                   </p>
                 </div>
               </li>
