--- a/assets/scss/pages/_home.scss
+++ b/assets/scss/pages/_home.scss
@@ -120,6 +120,21 @@
   .happy-users {
     @media screen and (min-width: $bp-lg) {
       background-color: $primary-home-100;
+
+      &:after {
+        position: absolute;
+        left: 0;
+        bottom: -10px;
+        display: inline-block;
+        width: 100%;
+        height: 500px;
+        content: "";
+        background-image: url('/images/home/happy-users/waves02.jpg');
+        background-repeat-x: repeat;
+        background-repeat-y: no-repeat;
+        background-position-y: bottom;
+        background-size: 100%;
+      }
     }
   }
 
