--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -15,39 +15,38 @@
       <div class="col-6 col-md-2">
         <p class="footer-title mb-2">Sitemap</p>
         <ul class="footer-links">
-          <li><a href="" class="footer-link">Why Keptn?</a></li>
-          <li><a href="" class="footer-link">Docs</a></li>
+          <li><a href="./why-keptn/" class="footer-link">Why Keptn?</a></li>
+          <li><a href="https://keptn.sh/docs" class="footer-link">Docs</a></li>
           <li><a href="https://tutorials.keptn.sh" class="footer-link">Tutorials</a></li>
           <li><a href="https://github.com/keptn-contrib" class="footer-link">Integration</a></li>
-          <li><a href="https://github.com/keptn/community" class="footer-link">Community</a></li>
         </ul>
       </div>
       <div class="col-6 col-md-2">
         <p class="footer-title mb-2">Resources</p>
         <ul class="footer-links">
-          <li><a href="" class="footer-link">Docs</a></li>
-          <li><a href="" class="footer-link">Tutorials</a></li>
-          <li><a href="" class="footer-link">Github</a></li>
-          <li><a href="" class="footer-link">Releases</a></li>
-          <li><a href="" class="footer-link">Issues</a></li>
+          <li><a href="https://keptn.sh/docs/" class="footer-link">Docs</a></li>
+          <li><a href="https://tutorials.keptn.sh" class="footer-link">Tutorials</a></li>
+          <li><a href="https://github.com/keptn/keptn" class="footer-link">Github</a></li>
+          <li><a href="https://github.com/keptn/keptn/releases/" class="footer-link">Releases</a></li>
+          <li><a href="https://github.com/keptn/keptn/issues" class="footer-link">Issues</a></li>
         </ul>
       </div>
       <div class="col-md-2 pt-3 pt-md-0">
         <p class="footer-title mb-2">Community</p>
         <div class="footer-icons">
-          <a class="footer-icon-link">
+          <a href="https://slack.keptn.sh" class="footer-icon-link">
             <img class="footer-icon" alt="Keptn Homepage" src="{{ .Site.BaseURL }}/images/home/icon-slack.svg">
           </a>
-          <a class="footer-icon-link">
+          <a href="https://twitter.com/keptnProject" class="footer-icon-link">
             <img class="footer-icon" alt="Keptn Homepage" src="{{ .Site.BaseURL }}/images/home/icon-twitter.svg">
           </a>
-          <a class="footer-icon-link">
+          <a href="https://groups.google.com/g/keptn" class="footer-icon-link">
             <img class="footer-icon" alt="Keptn Homepage" src="{{ .Site.BaseURL }}/images/home/icon-mail.svg">
           </a>
-          <a class="footer-icon-link">
+          <a href="https://github.com/keptn/keptn" class="footer-icon-link">
             <img class="footer-icon" alt="Keptn Homepage" src="{{ .Site.BaseURL }}/images/home/icon-github.svg">
           </a>
-          <a class="footer-icon-link">
+          <a href="https://www.youtube.com/c/keptn" class="footer-icon-link">
             <img class="footer-icon" alt="Keptn Homepage" src="{{ .Site.BaseURL }}/images/home/icon-youtube.svg">
           </a>
         </div>
