update waves for safari.

--- a/assets/scss/pages/_home.scss
+++ b/assets/scss/pages/_home.scss
@@ -130,6 +130,7 @@
         height: 500px;
         content: "";
         background-image: url('/images/home/happy-users/waves02.jpg');
+        background-repeat: no-repeat;
         background-repeat-x: repeat;
         background-repeat-y: no-repeat;
         background-position-y: bottom;
