--- a/layouts/partials/happy-users.html
+++ b/layouts/partials/happy-users.html
@@ -1,4 +1,4 @@
-<div class="happy-users p-relative">
+<div class="happy-users position-relative">
     <div class="container pt-4 pt-md-5 pb-md-3">
         <div class="row pt-md-3">
             <div class="text col-12 pb-md-0 pb-4 teaser-box">
