--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,13 +1,9 @@
-<div class="footer p-relative pb-5">
-  <div class="container pt-md-5">
-    <div class="row">
-      <div class="col-12 pb-5">
-        <a class="footer-icon-link footer-icon-link--top float-right f-right" onclick="window.scrollTo({ top: 0 });"
+<div class="footer pb-5">
+  <div class="container pt-5 position-relative">
+        <a class="footer-icon-link footer-icon-link--top" onclick="window.scrollTo({ top: 0 });"
            href="javascript: void(0)">
           <img class="footer-icon" alt="Back to top" src="{{ .Site.BaseURL }}/images/home/icon-arrow.svg">
         </a>
-      </div>
-    </div>
     <div class="row">
       <div class="col-md-6 text-left">
         <img class="footer-logo" alt="Keptn Homepage" src="{{ .Site.BaseURL }}/images/home/logo-white.svg">
