Update z-index for get-started buttons.

--- a/layouts/partials/get-started.html
+++ b/layouts/partials/get-started.html
@@ -9,15 +9,15 @@
           {{ end }}
 
           <div class="d-block d-md-flex mb-md-5 mb-lg-0">
-            <div class="d-block">
+            <div class="d-block z-index">
               <a href="https://keptn.sh/docs/quickstart/" class="d-inline-block button button--filledGreen mb-3 mb-lg-0 mr-md-2">Start now!</a>
               &nbsp;&nbsp;&nbsp;
             </div>
-            <div class="d-block">
+            <div class="d-block z-index">
               <a href="#" class="button button--outlinedWhite d-inline-block mb-3 mb-lg-0 mr-md-2">See it in action</a>
               &nbsp;&nbsp;&nbsp;
             </div>
-            <div class="d-block">
+            <div class="d-block z-index">
               <a href="https://keptn.sh/docs/" class="button button--outlinedWhite d-inline-block">Read docs</a>
             </div>
           </div>
