--- a/layouts/partials/happy-users.html
+++ b/layouts/partials/happy-users.html
@@ -43,37 +43,40 @@
                             <li class="splide__slide d-flex">
                                 <div class="splide__image" style="background-image: url('/images/home/img-client-02.png');"></div>
                                 <div class="splide__content">
-                                    <p>„Keptn allowed us to accelerate our
-                                        adoption of Kubernetes by at least a
-                                        year. It’s a unique value proposition
-                                        that has enabled us to create an
-                                        intelligent and fully automated
-                                        continuous delivery pipeline.“
-                                        telligent and fully automated
-                                        continuous delivery pipeline.“
+                                    <p>“With Keptn we are continuously evaluating resiliency of our microservices and infrastructure by running everyday performance and chaos tests.
+                                        Keptn allowed us to easily evaluate test results using native metrics and gives a lot of flexibility for the future implementations.”
                                     </p>
                                     <p class="splide__name">
-                                        Sebastian Bonk
+                                        Sebastian Świerczyna
                                     </p>
                                     <p class="splide__info">
-                                        Manager of Software
+                                        Chief Architect Kitopi
                                     </p>
                                 </div>
                             </li>
                             <li class="splide__slide d-flex">
                                 <div class="splide__image" style="background-image: url('/images/home/img-client-02.png');"></div>
                                 <div class="splide__content">
-                                    <p>„Keptn allowed us to accelerate our
-                                        adoption of Kubernetes by at least a
-                                        year. It’s a unique value proposition
-                                        that has enabled us to create an
-                                        in
+                                    <p>“Keptn enables us to shift-left within our development life-cylce and have faster turnaround times by adding another layer of quality evaluations to our pipelines. These quality gates help us to prevent shipping bad code to production - all done automatically without human intervention.”
                                     </p>
                                     <p class="splide__name">
-                                        Sebastian Bonk
+                                        Christian Heckelmann
                                     </p>
                                     <p class="splide__info">
-                                        Manager of Software adflkgj
+                                        Senior DevOps Engineer at ERT
+                                    </p>
+                                </div>
+                            </li>
+                            <li class="splide__slide d-flex">
+                                <div class="splide__image" style="background-image: url('/images/home/img-client-02.png');"></div>
+                                <div class="splide__content">
+                                    <p>“The combination of LitmusChaos testing and SLO-based evaluations with Keptn allows our users to identify and fix weaknesses in the resiliency of their applications. Keptn’s data-driven approach based on open-source standards allowed us to build an integration flawlessy.”
+                                    </p>
+                                    <p class="splide__name">
+                                        Uma Mukkara
+                                    </p>
+                                    <p class="splide__info">
+                                        Co-founder & COO of MayaData and Maintainer at LitmusChaos
                                     </p>
                                 </div>
                             </li>
