--- a/layouts/partials/happy-users.html
+++ b/layouts/partials/happy-users.html
@@ -43,21 +43,26 @@
                             <li class="splide__slide d-flex">
                                 <div class="splide__image" style="background-image: url('/images/home/img-client-02.png');"></div>
                                 <div class="splide__content">
-                                    <p>“With Keptn we are continuously evaluating resiliency of our microservices and infrastructure by running everyday performance and chaos tests.
-                                        Keptn allowed us to easily evaluate test results using native metrics and gives a lot of flexibility for the future implementations.”
+                                    <p>“With Keptn we are continuously evaluating resiliency of our microservices and
+                                        infrastructure by running everyday performance and chaos tests. Keptn allowed us
+                                        to easily evaluate test results using native metrics and gives a lot of flexibility
+                                        for the future implementations.”
                                     </p>
                                     <p class="splide__name">
                                         Sebastian Świerczyna
                                     </p>
                                     <p class="splide__info">
-                                        Chief Architect Kitopi
+                                        Chief Architect at Kitopi
                                     </p>
                                 </div>
                             </li>
                             <li class="splide__slide d-flex">
                                 <div class="splide__image" style="background-image: url('/images/home/img-client-02.png');"></div>
                                 <div class="splide__content">
-                                    <p>“Keptn enables us to shift-left within our development life-cylce and have faster turnaround times by adding another layer of quality evaluations to our pipelines. These quality gates help us to prevent shipping bad code to production - all done automatically without human intervention.”
+                                    <p>“Keptn enables us to shift-left within our development life-cylce and have faster
+                                        turnaround times by adding another layer of quality evaluations to our pipelines.
+                                        These quality gates help us to prevent shipping bad code to production -
+                                        all done automatically without human intervention.”
                                     </p>
                                     <p class="splide__name">
                                         Christian Heckelmann
@@ -70,13 +75,16 @@
                             <li class="splide__slide d-flex">
                                 <div class="splide__image" style="background-image: url('/images/home/img-client-02.png');"></div>
                                 <div class="splide__content">
-                                    <p>“The combination of LitmusChaos testing and SLO-based evaluations with Keptn allows our users to identify and fix weaknesses in the resiliency of their applications. Keptn’s data-driven approach based on open-source standards allowed us to build an integration flawlessy.”
+                                    <p>“The combination of LitmusChaos testing and SLO-based evaluations with Keptn
+                                        allows our users to identify and fix weaknesses in the resiliency of their
+                                        applications. Keptn’s data-driven approach based on open-source standards
+                                        allowed us to build an integration flawlessy.”
                                     </p>
                                     <p class="splide__name">
                                         Uma Mukkara
                                     </p>
                                     <p class="splide__info">
-                                        Co-founder & COO of MayaData and Maintainer at LitmusChaos
+                                        Co-founder&COO of MayaData and Maintainer at LitmusChaos
                                     </p>
                                 </div>
                             </li>
