Update comment get started buttons.

--- a/layouts/partials/usage.html
+++ b/layouts/partials/usage.html
@@ -12,11 +12,13 @@
               Start now!
             </a>
           </div>
+          <!-- Remove comment if button is needed
           <div class="d-block">
             <a class="button button--outlinedBlue d-inline-block mb-3 mb-lg-0 mr-0 mr-md-3" href="#">
               See it in action
             </a>
           </div>
+          /-->
           <div class="d-block">
             <a class="button button--outlinedBlue d-inline-block" href="https://keptn.sh/docs/0.8.x/monitoring/">
               Read docs
