--- a/layouts/partials/tools-cards.html
+++ b/layouts/partials/tools-cards.html
@@ -135,7 +135,7 @@
       {{ .Content }}
       {{ end }}
       <div class="col-12 col-md-10 pr-0 pl-0 pt-4">
-        <a class="button button--filledGreen d-inline-block" href="https://github.com/keptn-contrib/">
+        <a class="button button--filledGreen d-inline-block" href="https://keptn.sh/docs/integrations/">
           Explore more
         </a>
       </div>
