--- a/layouts/partials/main-menu-mobile.html
+++ b/layouts/partials/main-menu-mobile.html
@@ -18,7 +18,7 @@
     </li>
 
     <li class="menu-item-integrations">
-      <a href="https://github.com/keptn-contrib">
+      <a href="https://keptn.sh/docs/integrations/">
         <span>Integrations</span>
       </a>
     </li>
