--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,5 +1,5 @@
 {{ define "title" }}
-keptn | An event-based control plane for continuous delivery and automated operations for cloud-native applications
+keptn | Cloud-native application life-cycle orchestration
 {{ end }}
 
 {{ define "header_css" }}
@@ -18,8 +18,8 @@ page-home
 {{ end }}
 
 {{ define "meta" }}
-<meta property="og:description" content="Building the fabric for cloud-native lifecycle automation at enterprise scale">
-<meta property="og:title" content="Keptn - an event-based control plane for continuous delivery and automated operations for cloud-native applications.">
+<meta property="og:description" content="Cloud-native application life-cycle orchestration">
+<meta property="og:title" content="Keptn - Cloud-native application life-cycle orchestration.">
 <meta property="og:image" content="https://keptn.sh/favicon.png">
 <meta property="og:url" content="https://keptn.sh/index.html">
 <meta name="twitter:card" content="summary_large_image">
