Update slack footer / remove delivery slack button

--- a/layouts/partials/delivery.html
+++ b/layouts/partials/delivery.html
@@ -7,16 +7,9 @@
                 {{ end }}
 
                 <div class="d-block d-md-flex">
-                    <div class="d-block">
-                        <a class="button button--filledGreen d-inline-block mb-3 mb-lg-0 mr-0 mr-md-3" href="https://keptn.sh/docs/quickstart/">
-                            Start now!
-                        </a>
-                    </div>
-                    <div class="d-block">
-                        <a class="button button--outlinedBlue d-inline-block mb-3 mb-lg-0 mr-0 mr-md-3" href="https://slack.keptn.sh">
-                            Keptn on Slack
-                        </a>
-                    </div>
+                    <a class="button d-inline-block button--filledGreen" href="https://keptn.sh/docs/quickstart/">
+                        Start now!
+                    </a>
                 </div>
             </div>
         </div>
