--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -25,6 +25,7 @@
           <li><a href="https://github.com/keptn/keptn" class="footer-link">Github</a></li>
           <li><a href="https://github.com/keptn/keptn/releases/" class="footer-link">Releases</a></li>
           <li><a href="https://github.com/keptn/keptn/issues" class="footer-link">Issues</a></li>
+          <li><a href="https://slack.keptn.sh" class="footer-link">Slack</a></li>
         </ul>
       </div>
       <div class="col-md-2 pt-3 pt-md-0">
